--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     --text-colour: #f1e6e6; 
     --heading-font: 'Merriweather', serif;
     --text-font: 'Questrial', sans-serif;
+    --box-shadow:  0 5px 10px rgba(118, 107, 107, 0.3);
+    --bs-acordion-active-color: #fff !important;
 }
 
 body{
@@ -28,6 +30,10 @@ p {
     font-size: 20px;
 }
 
+img {
+    padding: 8px 8px;
+    box-shadow: var(--box-shadow);
+}
 
 .intro {
     margin-top: 40px;
@@ -51,7 +57,7 @@ p {
 }
 
 .underline {
-    text-decoration: dashed;
+    text-decoration: underline;
 }
 
 .accordion-button, .accordion-body {
@@ -60,10 +66,23 @@ p {
     color: var(--text-colour);
 }
 
+
+.accordion-button.collapsed::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
 .accordion-body {
     font-style: italic;
 }
 
+.img-transform {
+    border-radius: 12px;
+    transition: transform 150ms ease-in-out;
+}
+
+.img-transform:hover {
+    transform: scale(1.2);
+}
 
 @media (max-width: 575.98px) {
     p {
@@ -73,5 +92,11 @@ p {
     footer {
         text-align: center;
         font-size: 14px;
+    }
+
+    img {
+        display: block;
+        margin: 30px auto;
+        width: 50%;
     }
 }
